Animation 'check card' terminée

--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -53,6 +53,13 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">25€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -67,10 +74,17 @@
                   <div class="entries__list__card__txt">
                     <h3 class="entries__list__card__title">Caviar osciètre</h3>
                     <p class="entries__list__card__subtitle">
-                      Sur blini à la farine de ble
+                      Sur blini à la farine de blé noir
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -91,6 +105,13 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">20€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -106,11 +127,18 @@
                     <h3 class="entries__list__card__title">
                       Foie gras de canard cuit entier
                     </h3>
-                    <p class="entries__list__card__subtitle">
+                    <p class="entries__list__card__subtitle unset_overflow">
                       Confiture de figue et pain toasté
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -136,6 +164,13 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -154,6 +189,13 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -166,14 +208,21 @@
               <li>
                 <div class="plats__list__card">
                   <div class="plats__list__card__txt">
-                    <h3 class="plats__list__card__title">
+                    <h3 class="plats__list__card__title unset_overflow">
                       Mijoté de queue de boeuf
                     </h3>
-                    <p class="plats__list__card__subtitle">
+                    <p class="plats__list__card__subtitle unset_overflow">
                       Et riz sauvage aux zestes de citron
                     </p>
                   </div>
                   <p class="plats__list__card__price">45€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -199,6 +248,13 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -219,6 +275,13 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -231,12 +294,19 @@
               <li>
                 <div class="desserts__list__card">
                   <div class="desserts__list__card__txt">
-                    <h3 class="desserts__list__card__title">
+                    <h3 class="desserts__list__card__title unset_overflow">
                       Tarte au citron meringuée
                     </h3>
                     <p class="desserts__list__card__subtitle">Déstructurée</p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
