--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -53,6 +53,13 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">25€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -65,7 +72,7 @@
               <li>
                 <div class="entries__list__card">
                   <div class="entries__list__card__txt">
-                    <h3 class="entries__list__card__title">
+                    <h3 class="entries__list__card__title unset_overflow">
                       Foie gras de canard mi-cuit
                     </h3>
                     <p class="entries__list__card__subtitle">
@@ -73,6 +80,13 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -91,6 +105,14 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">20€</p>
+                  <!--div class="entries__list__card__checkbox"></!--div-->
+                    <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                    <label for="checkbox" class="checkbox-label">
+                      <i
+                        class="fa-solid fa-circle-check fa-2xl"
+                        aria-hidden="true"
+                      ></i>
+                    </label>
                   <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -108,7 +130,7 @@
               <li>
                 <div class="plats__list__card">
                   <div class="plats__list__card__txt">
-                    <h3 class="plats__list__card__title">
+                    <h3 class="plats__list__card__title unset_overflow">
                       Filet de boeuf aux herbes
                     </h3>
                     <p class="plats__list__card__subtitle">
@@ -116,19 +138,26 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
-                  <button class="btn-1">
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </button>
+                  </label>
+                  <!--button class="btn-1">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </!--button-->
                 </div>
               </li>
 
               <li>
                 <div class="plats__list__card">
                   <div class="plats__list__card__txt">
-                    <h3 class="plats__list__card__title">
+                    <h3 class="plats__list__card__title long-title">
                       Parmentier de queue de boeuf
                     </h3>
                     <p class="plats__list__card__subtitle">
@@ -136,6 +165,13 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -152,6 +188,13 @@
                     <p class="plats__list__card__subtitle">Aux agrumes</p>
                   </div>
                   <p class="plats__list__card__price">44€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -173,6 +216,13 @@
                     <p class="desserts__list__card__subtitle">Revisité</p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -193,6 +243,13 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -213,6 +270,13 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
