--- a/restaurants/a_la_française.html
+++ b/restaurants/a_la_française.html
@@ -45,7 +45,7 @@
               <li>
                 <div class="entries__list__card">
                   <div class="entries__list__card__txt">
-                    <h3 class="entries__list__card__title">
+                    <h3 class="entries__list__card__title unset_overflow ">
                       Tartare de poulple acidulé
                     </h3>
                     <p class="entries__list__card__subtitle">
@@ -53,6 +53,13 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">25€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -65,7 +72,7 @@
               <li>
                 <div class="entries__list__card">
                   <div class="entries__list__card__txt">
-                    <h3 class="entries__list__card__title">
+                    <h3 class="entries__list__card__title unset_overflow">
                       Velouté de légumes d'antan
                     </h3>
                     <p class="entries__list__card__subtitle">
@@ -73,6 +80,13 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -89,6 +103,13 @@
                     <p class="entries__list__card__subtitle">Revistée</p>
                   </div>
                   <p class="entries__list__card__price">20€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -106,7 +127,7 @@
               <li>
                 <div class="plats__list__card">
                   <div class="plats__list__card__txt">
-                    <h3 class="plats__list__card__title">
+                    <h3 class="plats__list__card__title unset_overflow">
                       Coquilles Saint-Jacques
                     </h3>
                     <p class="plats__list__card__subtitle">
@@ -114,6 +135,13 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -127,11 +155,18 @@
                 <div class="plats__list__card">
                   <div class="plats__list__card__txt">
                     <h3 class="plats__list__card__title">Magret de canard</h3>
-                    <p class="plats__list__card__subtitle">
+                    <p class="plats__list__card__subtitle unset_overflow">
                       Et parmentier de pommes de terre
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -144,7 +179,7 @@
               <li>
                 <div class="plats__list__card">
                   <div class="plats__list__card__txt">
-                    <h3 class="plats__list__card__title">
+                    <h3 class="plats__list__card__title ">
                       Pigeonneau d'Ille-et-Vilaine
                     </h3>
                     <p class="plats__list__card__subtitle">
@@ -152,6 +187,13 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">44€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -169,7 +211,7 @@
               <li>
                 <div class="desserts__list__card">
                   <div class="desserts__list__card__txt">
-                    <h3 class="desserts__list__card__title">
+                    <h3 class="desserts__list__card__title unset_overflow">
                       Pétales de violettes glacés
                     </h3>
                     <p class="desserts__list__card__subtitle">
@@ -177,6 +219,13 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -195,6 +244,13 @@
                     <p class="desserts__list__card__subtitle">Revisité</p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -215,6 +271,13 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
