--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -51,6 +51,13 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">25€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -66,11 +73,18 @@
                     <h3 class="entries__list__card__title">
                       Bouchée de homard croustillant
                     </h3>
-                    <p class="entries__list__card__subtitle">
+                    <p class="entries__list__card__subtitle unset_overflow">
                       Et sa farandole de petits légumes
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -91,6 +105,13 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">40€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -116,6 +137,13 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                    <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -134,6 +162,13 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -154,6 +189,13 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">44€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -177,6 +219,13 @@
                     <p class="desserts__list__card__subtitle">Du chef</p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                    <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -193,6 +242,13 @@
                     <p class="desserts__list__card__subtitle">Revisitée</p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
@@ -209,6 +265,13 @@
                     <p class="desserts__list__card__subtitle">A la noisette</p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
+                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
+                  <label for="checkbox" class="checkbox-label">
+                    <i
+                      class="fa-solid fa-circle-check fa-2xl"
+                      aria-hidden="true"
+                    ></i>
+                  </label>
                   <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
