Animation Coeur & Hover bouton terminée

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">
     <link href="./sass/styles.css" rel="stylesheet" />
+    
+    
     <title>OhMyFood</title>
   </head>
   <body>
@@ -83,12 +85,10 @@
                           Ménilmontant<!--<span class="euro">€</span>-->
                         </p>
                       </div>
-                      <div class="card-rating">
-                        <i
-                          class="fa-regular fa-heart fa-2xl"
-                          aria-hidden="true"
-                        ></i>
-                      </div>
+                      <span class="heart-icon">
+                        <i class="fa-regular fa-heart fa-2xl empty-heart" aria-hidden="true"></i>
+                        <i class="fa-solid fa-heart fa-2xl full-heart" aria-hidden="true"></i>
+                      </span>
                     </div>
                   </article>
                 </a>
@@ -109,11 +109,10 @@
                           Charonne<!--<span class="euro">€</span>-->
                         </p>
                       </div>
-                      <div class="card-rating">
-                        <i
-                          class="fa-regular fa-heart fa-2xl"
-                          aria-hidden="true"
-                        ></i>
+                      <span class="heart-icon">
+                        <i class="fa-regular fa-heart fa-2xl empty-heart" aria-hidden="true"></i>
+                        <i class="fa-solid fa-heart fa-2xl full-heart" aria-hidden="true"></i>
+                      </span>
                   </article>
                 </a>
               </div>
@@ -133,12 +132,10 @@
                           Cite Rouge<!--<span class="euro">€</span>-->
                         </p>
                       </div>
-                      <div class="card-rating">
-                        <i
-                          class="fa-regular fa-heart fa-2xl"
-                          aria-hidden="true"
-                        ></i>
-                      </div>
+                      <span class="heart-icon">
+                        <i class="fa-regular fa-heart fa-2xl empty-heart" aria-hidden="true"></i>
+                        <i class="fa-solid fa-heart fa-2xl full-heart" aria-hidden="true"></i>
+                      </span>
                     </div>
                   </article>
                 </a>
@@ -157,12 +154,10 @@
                           Folie-Méricourt<!--<span class="euro">€</span>-->
                         </p>
                       </div>
-                      <div class="card-rating">
-                        <i
-                          class="fa-regular fa-heart fa-2xl"
-                          aria-hidden="true"
-                        ></i>
-                      </div>
+                      <span class="heart-icon">
+                        <i class="fa-regular fa-heart fa-2xl empty-heart" aria-hidden="true"></i>
+                        <i class="fa-solid fa-heart fa-2xl full-heart" aria-hidden="true"></i>
+                      </span>
                     </div>
                   </article>
                 </a>
