--- a/restaurants/a_la_française.html
+++ b/restaurants/a_la_française.html
@@ -37,7 +37,10 @@
         <div class="menu__content">
           <div class="menu__content__title">
             <h1 class="menu__title">À la Française</h1>
-            <i class="fa-regular fa-heart fa-2xl" aria-hidden="true"></i>
+            <span class="heart-icon">
+              <i class="fa-regular fa-heart fa-2xl empty-heart" aria-hidden="true"></i>
+              <i class="fa-solid fa-heart fa-2xl full-heart" aria-hidden="true"></i>
+            </span>
           </div>
           <div class="entries">
             <h2 class="entries__title"><span>ENTR</span>ÉES</h2>
