--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -37,7 +37,10 @@
         <div class="menu__content">
           <div class="menu__content__title">
             <h1 class="menu__title">Le délice des sens</h1>
-            <i class="fa-regular fa-heart fa-2xl" aria-hidden="true"></i>
+            <span class="heart-icon">
+              <i class="fa-regular fa-heart fa-2xl empty-heart" aria-hidden="true"></i>
+              <i class="fa-solid fa-heart fa-2xl full-heart" aria-hidden="true"></i>
+            </span>
           </div>
           <div class="entries">
             <h2 class="entries__title"><span>ENTR</span>ÉES</h2>
@@ -97,7 +100,7 @@
               <li>
                 <div class="entries__list__card">
                   <div class="entries__list__card__txt">
-                    <h3 class="entries__list__card__title">
+                    <h3 class="entries__list__card__title ft-s">
                       Poulet rôti aux herbes de provences
                     </h3>
                     <p class="entries__list__card__subtitle">
@@ -130,7 +133,7 @@
                 <div class="plats__list__card">
                   <div class="plats__list__card__txt">
                     <h3 class="plats__list__card__title">
-                      Poulet rôti aux herbes de provence
+                      Poulet rôti aux herbes de provences
                     </h3>
                     <p class="plats__list__card__subtitle">
                       Et sa crème de truffe
