--- a/index.html
+++ b/index.html
@@ -41,13 +41,11 @@
           <h2>Fonctionnement</h2>
           <div class="fonctionnement__bar">
             <ol>
-              <div class="fonctionnement__bar__step">
                 <li>
                   <p>1</p>
                   <i class="fas fa-mobile-alt" aria-hidden="true"></i>Choisissez
                   un restaurant
                 </li>
-              </div>
               <li>
                 <p>2</p>
                 <i class="fas fa-list-ul" aria-hidden="true"></i>Composez votre
@@ -167,13 +165,15 @@
         </section>
       </main>
       <footer>
-        <ul>
+        <div class="footer__list">
           <h2>ohmyfood</h2>
-            <li><i class="fa-solid fa-utensils fa-xs space-list" ></i>Proposer un restaurant</li>
-            <li><i class="fa-solid fa-handshake-angle fa-xs space-list-2"></i>Devenir partenaire</li>
-          <li>Mentions légales</</li>
-          <li>Contact</li>
-        </ul>
+            <ul>
+              <li><i class="fa-solid fa-utensils fa-xs space-list" ></i>Proposer un restaurant</li>
+              <li><i class="fa-solid fa-handshake-angle fa-xs space-list-2"></i>Devenir partenaire</li>
+              <li>Mentions légales</</li>
+              <li>Contact</li>
+            </ul>
+        </div>
       </footer>
     </div>
   </body>
