--- a/restaurants/a_la_française.html
+++ b/restaurants/a_la_française.html
@@ -34,6 +34,7 @@
             alt="à la francaise"
           />
         </div>
+        <div class="bg-size">
         <div class="menu__content">
           <div class="menu__content__title">
             <h1 class="menu__title">À la Française</h1>
@@ -291,21 +292,24 @@
               </li>
             </ul>
           </div>
+          <div class="entries__btn">
+            <button class="entries__btn__btn">Commander</button>
+          </div>
+        </div>
         </div>
 
-        <div class="entries__btn">
-          <button class="entries__btn__btn">Commander</button>
-        </div>
       </main>
 
       <footer>
-        <ul>
+        <div class="footer__list">
           <h2>ohmyfood</h2>
-            <li><i class="fa-solid fa-utensils fa-xs space-list" ></i>Proposer un restaurant</li>
-            <li><i class="fa-solid fa-handshake-angle fa-xs space-list-2"></i>Devenir partenaire</li>
-          <li>Mentions légales</</li>
-          <li>Contact</li>
-        </ul>
+            <ul>
+              <li><i class="fa-solid fa-utensils fa-xs space-list" ></i>Proposer un restaurant</li>
+              <li><i class="fa-solid fa-handshake-angle fa-xs space-list-2"></i>Devenir partenaire</li>
+              <li>Mentions légales</</li>
+              <li>Contact</li>
+            </ul>
+        </div>
       </footer>
     </div>
   </body>
