Spinner loader et transition sur menu terminée (Projet Terminé)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <title>OhMyFood</title>
   </head>
   <body>
+    <div class="hidden__page">
+      <div class="loader"></div>
+    </div>
     <div class="main__container">
       <header>
         <div class="header--logo">
@@ -171,7 +174,7 @@
               <li><i class="fa-solid fa-utensils fa-xs space-list" ></i>Proposer un restaurant</li>
               <li><i class="fa-solid fa-handshake-angle fa-xs space-list-2"></i>Devenir partenaire</li>
               <li>Mentions légales</</li>
-              <li>Contact</li>
+              <li><a href="mailto:9uJt6@example.com">Contact</a></li>
             </ul>
         </div>
       </footer>
