--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -109,8 +109,8 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">20€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-1" class="hidden-checkbox" />
+                  <label for="checkbox-1" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -136,8 +136,8 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-2" class="hidden-checkbox" />
+                  <label for="checkbox-2" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -168,8 +168,8 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-3" class="hidden-checkbox" />
+                    <label for="checkbox-3" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -193,8 +193,8 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-4" class="hidden-checkbox" />
+                  <label for="checkbox-4" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -220,8 +220,8 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">45€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-5" class="hidden-checkbox" />
+                  <label for="checkbox-5" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -252,8 +252,8 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-6" class="hidden-checkbox" />
+                  <label for="checkbox-6" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -279,8 +279,8 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-7" class="hidden-checkbox" />
+                  <label for="checkbox-7" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -304,8 +304,8 @@
                     <p class="desserts__list__card__subtitle">Déstructurée</p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-9" class="hidden-checkbox" />
+                  <label for="checkbox-9" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
