--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -55,8 +55,8 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">25€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-1" class="hidden-checkbox" />
+                  <label for="checkbox-1" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -82,8 +82,8 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-2" class="hidden-checkbox" />
+                  <label for="checkbox-2" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -109,8 +109,8 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">40€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-3" class="hidden-checkbox" />
+                  <label for="checkbox-3" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -141,8 +141,8 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-4" class="hidden-checkbox" />
+                  <label for="checkbox-4" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -166,8 +166,8 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-5" class="hidden-checkbox" />
+                  <label for="checkbox-5" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -193,8 +193,8 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">44€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-6" class="hidden-checkbox" />
+                  <label for="checkbox-6" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -223,8 +223,8 @@
                     <p class="desserts__list__card__subtitle">Du chef</p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-7" class="hidden-checkbox" />
+                  <label for="checkbox-7" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -246,8 +246,8 @@
                     <p class="desserts__list__card__subtitle">Revisitée</p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-8" class="hidden-checkbox" />
+                  <label for="checkbox-8" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -269,8 +269,8 @@
                     <p class="desserts__list__card__subtitle">A la noisette</p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-9" class="hidden-checkbox" />
+                  <label for="checkbox-9" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
