--- a/restaurants/a_la_française.html
+++ b/restaurants/a_la_française.html
@@ -57,8 +57,8 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">25€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-1" class="hidden-checkbox" />
+                  <label for="checkbox-1" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -84,8 +84,8 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-2" class="hidden-checkbox" />
+                  <label for="checkbox-2" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -107,8 +107,8 @@
                     <p class="entries__list__card__subtitle">Revistée</p>
                   </div>
                   <p class="entries__list__card__price">20€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-3" class="hidden-checkbox" />
+                  <label for="checkbox-3" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -139,8 +139,8 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-4" class="hidden-checkbox" />
+                  <label for="checkbox-4" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -164,8 +164,8 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-5" class="hidden-checkbox" />
+                  <label for="checkbox-5" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -191,8 +191,8 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">44€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-6" class="hidden-checkbox" />
+                  <label for="checkbox-6" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -223,8 +223,8 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-7" class="hidden-checkbox" />
+                  <label for="checkbox-7" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -248,8 +248,8 @@
                     <p class="desserts__list__card__subtitle">Revisité</p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-8" class="hidden-checkbox" />
+                  <label for="checkbox-8" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -275,8 +275,8 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-9" class="hidden-checkbox" />
+                  <label for="checkbox-9" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
