--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -17,6 +17,7 @@
     <title>OhMyFood</title>
   </head>
   <body>
+    <div class="transition__page"></div>
     <div class="main__container">
       <header>
         <div class="go__back">
@@ -57,8 +58,8 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">25€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-1" class="hidden-checkbox" />
+                  <label for="checkbox-1" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -84,8 +85,8 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-2" class="hidden-checkbox" />
+                  <label for="checkbox-2" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -110,8 +111,8 @@
                   </div>
                   <p class="entries__list__card__price">20€</p>
                   <!--div class="entries__list__card__checkbox"></!--div-->
-                    <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                    <label for="checkbox" class="checkbox-label">
+                    <input type="checkbox" name="checkbox" id="checkbox-3" class="hidden-checkbox" />
+                    <label for="checkbox-3" class="checkbox-label">
                       <i
                         class="fa-solid fa-circle-check fa-2xl"
                         aria-hidden="true"
@@ -142,8 +143,8 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-4" class="hidden-checkbox" />
+                  <label for="checkbox-4" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -169,8 +170,8 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-5" class="hidden-checkbox" />
+                  <label for="checkbox-5" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -192,8 +193,8 @@
                     <p class="plats__list__card__subtitle">Aux agrumes</p>
                   </div>
                   <p class="plats__list__card__price">44€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-6" class="hidden-checkbox" />
+                  <label for="checkbox-6" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -220,8 +221,8 @@
                     <p class="desserts__list__card__subtitle">Revisité</p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-7" class="hidden-checkbox" />
+                  <label for="checkbox-7" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -247,8 +248,8 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-8" class="hidden-checkbox" />
+                  <label for="checkbox-8" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
@@ -274,8 +275,8 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
-                  <input type="checkbox" name="checkbox" id="checkbox" class="hidden-checkbox" />
-                  <label for="checkbox" class="checkbox-label">
+                  <input type="checkbox" name="checkbox" id="checkbox-9" class="hidden-checkbox" />
+                  <label for="checkbox-9" class="checkbox-label">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
